@@ -10,6 +10,7 @@
 
 
 Version 4.1.6
+ - Added [ 2014313 ] Clippings: limit number of generations (yalnifj)
  - Lightbox: added JW flash player video support for .flv media files (windmillway)
  - Added Install Wizard.  Removed old editconfig.php (yalnifj)
  - Fixed [ 2130589 ] [3942] No GEDCOM upload replacement (fisharebest)
